# multimodal_RAG

./: .gitignore  pyproject.toml  requirements.txt
notebook/: document.ipynb
